--- a/Canvas.html
+++ b/Canvas.html
@@ -9,6 +9,7 @@
     <title>Space Invaders</title>
 </head>
 <body>  
+    <div class="stars"></div>
     <div id="gamecenter">
         <canvas id="myCanvas" width="500" height="500"></canvas>
     </div>
