--- a/space.html
+++ b/space.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invaders</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="space.css">
 </head>
 <body>
 
@@ -21,5 +21,5 @@
     
       
 </body>
-<script src="js.js"></script>
+<script src="space.js"></script>
 </html>
