ajout du background

--- a/space.html
+++ b/space.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="space.css">
 </head>
 <body>
+    <div class="stars"></div>
+
 
     <div id="gameCenter">
         
