--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Space Invaders</title>
+    <link rel="stylesheet" href="style.css">    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space Invaders</title>
-    <link rel="style" href="style.css" />
+
   
   
   </head>
+  <div class="stars"></div>
   <body>
-    <h1>Space Invaders</h1>
-    <canvas id="game"></canvas>
+    
+
+    <div id="center">
+      <h1>Space Invaders</h1>
+      <canvas id="game"></canvas>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
