--- a/canvas/index.html
+++ b/canvas/index.html
@@ -13,9 +13,9 @@
   <div class="stars"></div>
   <body>
     
-
+    <div id="score">Score : <span id="score1">0</span>  </div>
     <div id="center">
-      <h1>Space Invaders</h1>
+      <h1><strong>Space Invaders</strong> </h1>
       <canvas id="game"></canvas>
     </div>
     <script type="module" src="index.js"></script>
