crédit de samba

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -18,6 +18,9 @@
       <h1><strong>Space Invaders</strong> </h1>
       <canvas id="game"></canvas>
     </div>
+    <div id="foot">
+      <footer> bruitage : samba ->  <img src="../img/samba.jpg" width="70px" height="100px"></footer>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
