--- a/canvas/index.html
+++ b/canvas/index.html
@@ -11,7 +11,7 @@
   
   </head>
   <header>
-    <img src="../img/logo.jpg">
+    <a href="acceuil.html"><img src="../img/logo.jpg"></a>
 </header>
   <div class="stars"></div>
   <body>
