--- a/canvas/acceuil.html
+++ b/canvas/acceuil.html
@@ -13,7 +13,7 @@
 </head>
 <div class="stars"></div>
 <header>
-    <a href="acceuil.html"><img src="../img/logo.jpg"></a>
+    <a href="acceuil.html"><img src="../img/logo.png"></a>
 </header>
 
 <body>
