--- a/canvas/index.html
+++ b/canvas/index.html
@@ -11,12 +11,13 @@
   
   </head>
   <header>
-    <a href="acceuil.html"><img src="../img/logo.jpg"></a>
+    <a href="acceuil.html"><img src="../img/logo.png"></a>
 </header>
   <div class="stars"></div>
   <body>
     
     <div id="score">Score : <span id="score1">0</span>  </div>
+    <div id="score2">HighScore : <span id="score3">0</span>  </div>
     <div id="center">
       <h1><strong>Space Invaders</strong> </h1>
       <canvas id="game"></canvas>
