--- a/canvas/index.html
+++ b/canvas/index.html
@@ -18,6 +18,9 @@
     
     <div id="score">Score : <span id="score1">0</span>  </div>
     <div id="score2">HighScore : <span id="score3">0</span>  </div>
+    <div>
+      <button id="reset">Reset HighScore</button>
+    </div>
     <div id="center">
       <h1><strong>Space Invaders</strong> </h1>
       <canvas id="game"></canvas>
