--- a/canvas/index.html
+++ b/canvas/index.html
@@ -18,8 +18,9 @@
     
     <div id="score">Score : <span id="score1">0</span>  </div>
     <div id="score2">HighScore : <span id="score3">0</span>  </div>
-    <div>
+    <div id="resetplay">
       <button id="reset">Reset HighScore</button>
+      <button id="replay">Replay</button>
     </div>
     <div id="center">
       <h1><strong>Space Invaders</strong> </h1>
