--- a/canvas/acceuil.html
+++ b/canvas/acceuil.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
 </head>
 <div class="stars"></div>
 <header>
@@ -23,10 +23,18 @@
 
     </div>
     <div id="level">
-        <button type="button" class="button" value="1" onclick="window.location.href = './index.html';">1</button>
-        <button type="button" class="button" value="2" onclick="window.location.href = './index.html';">2</button>
-        <button type="button" class="button" value="3" onclick="window.location.href = './index.html';">3</button>
+        <button id="btn1"type="button" class="button" value="1" onclick="window.location.href = './index.html';">
+        </button>
+
+        <button id="btn2"type="button" class="button" value="2" onclick="window.location.href = './index.html';">Moyen</button>
+        <button id="btn3"type="button" class="button" value="3" onclick="window.location.href = './index.html';">
+           <p id="pDifficile">Dificile</p>
+        </button>
+        <img id="fauxMortDroite"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
+        <img id="fauxMortGauche"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
+
     </div>
+
     <div id="foot">
         <footer> bruitage : samba -> <img src="../img/samba.jpg" width="70px" height="100px"></footer>
     </div>
