--- a/canvas/acceuil.html
+++ b/canvas/acceuil.html
@@ -28,7 +28,7 @@
 
         <button id="btn2"type="button" class="button" value="2" onclick="window.location.href = './index.html';">Moyen</button>
         <button id="btn3"type="button" class="button" value="3" onclick="window.location.href = './index.html';">
-           <p id="pDifficile">Dificile</p>
+           <p id="pDifficile">Difficile</p>
         </button>
         <img id="fauxMortDroite"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
         <img id="fauxMortGauche"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
