--- a/canvas/acceuil.html
+++ b/canvas/acceuil.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik+Bubbles&display=swap" rel="stylesheet">
 </head>
 <div class="stars"></div>
 <header>
@@ -24,11 +27,19 @@
     </div>
     <div id="level">
         <button id="btn1"type="button" class="button" value="1" onclick="window.location.href = './index.html';">
+            <p id="pFacile">Facile</p>
         </button>
+        <img src="./images/coeurRose.webp" alt="" id="coeurDroite">
+        <img src="./images/coeurRose.webp" alt="" id="coeurGauche">
 
-        <button id="btn2"type="button" class="button" value="2" onclick="window.location.href = './index.html';">Moyen</button>
+        <button id="btn2"type="button" class="button" value="2" onclick="window.location.href = './index.html';">
+            <div id="tirBlaster"></div>
+        </button>
+        <img id="blaster"src="./images/baster-removebg-preview.png" alt="">
+
+        <img id="imgNormal"src="./images/typeNormalPokemon.webp" alt="">
         <button id="btn3"type="button" class="button" value="3" onclick="window.location.href = './index.html';">
-           <p id="pDifficile">Dificile</p>
+           <p id="pDifficile">Difficile</p>
         </button>
         <img id="fauxMortDroite"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
         <img id="fauxMortGauche"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
