--- a/canvas/accueil.html
+++ b/canvas/accueil.html
@@ -16,7 +16,7 @@
 </head>
 <div class="stars"></div>
 <header>
-    <a href="acceuil.html"><img src="../img/logo.png"></a>
+    <a href="accueil.html"><img src="../img/logo.png"></a>
 </header>
 
 <body>
