--- a/canvas/accueil.html
+++ b/canvas/accueil.html
@@ -41,8 +41,8 @@
         <button id="btn3"type="button" class="button" value="3" onclick="window.location.href = './index.html';">
            <p id="pDifficile">Difficile</p>
         </button>
-        <img id="fauxMortDroite"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
-        <img id="fauxMortGauche"src="./images/faux-de-la-mort-droite-removebg-preview.png" alt="">
+        <img id="fauxMortDroite"src="./images/faux-de-la-mort-droite-removebg-preview.png">
+        <img id="fauxMortGauche"src="./images/faux-de-la-mort-droite-removebg-preview.png">
 
     </div>
 
