--- a/canvas/accueil.html
+++ b/canvas/accueil.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="../img/logo.png" />
     <title>Space Invaders</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
