--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="../img/logo.png" />
     <title>Space Invaders</title>
     <link rel="stylesheet" href="style.css">    
     <meta charset="UTF-8" />
